--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="apple-touch-icon" sizes="76x76" href="book.png">
-    <link rel="icon" type="image/png" href="book.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
     <title><%= yield(:page_title) %> | Nawas</title>
-
+    <!-- <link rel="apple-touch-icon" sizes="76x76" href="book.png">
+    <link rel="icon" type="image/png" href="book.png"> -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
