--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -1,72 +1,77 @@
 <% provide(:page_title, 'home') %>
 
-<div id="carouselExampleControls" class="  carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100 img_s" src="https://www.opencenter.org/wp-content/uploads/2014/04/IMG_4023.jpg" alt="First slide">
+  <div id="carouselExampleControls" class="  carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100 img_s" src="https://www.opencenter.org/wp-content/uploads/2014/04/IMG_4023.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 img_s" src="https://s.hdnux.com/photos/72/74/54/15452942/7/gallery_medium.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 img_s" src="https://lh3.googleusercontent.com/4JOhIWm-IXsBiTG3BtvpChZ8OWOFKVWu3QV6AGz1MWbFpkM9z52G1kQZdfq4uLarT-Ld3IWw=w1080-h608-p-no-v0" alt="Third slide">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 img_s" src="https://s.hdnux.com/photos/72/74/54/15452942/7/gallery_medium.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 img_s" src="https://lh3.googleusercontent.com/4JOhIWm-IXsBiTG3BtvpChZ8OWOFKVWu3QV6AGz1MWbFpkM9z52G1kQZdfq4uLarT-Ld3IWw=w1080-h608-p-no-v0" alt="Third slide">
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
+  <br>
+  <br>
+  <div class="home">
 
+    <%= link_to cart_path(@current_cart) , class: "btn btn-success btnc_cart" do %>
+    <%= fa_icon("cart-plus") %>
+    Cart
+  <% end %>
 
-<br>
-<br>
-<div class="home">
+  <h1>
+    bookstore
+  </h1>
 
-   <%= link_to cart_path(@current_cart) , class: "btn btn-success btnc_cart" do  %>
-       <%= fa_icon("cart-plus") %>
-           Cart
-          <% end %>
-
- <h1>
-  bookstore
-</h1>
-
-<div class="container-fluid">
-  <h4>  Gallery</h4>
-  <div class="row d-inline-flex">
-    <!-- Gallery Item 1 -->
-    <% @book.each do |f|  %>
-      <div class="col-8 col-sm-4 col-md-3 p-2">
-        <div class="card h-100">
-          <%= image_tag(f.image, size: "150x250", alt: "Image" , class:"card-img-top") %>
+  <div class="container-fluid">
+    <h4>
+      Gallery</h4>
+    <div class="row d-inline-flex">
+      <!-- Gallery Item 1 -->
+      <% @book.each do |f|  %>
+        <div class="col-8 col-sm-4 col-md-3 p-2">
+          <div class="card h-100">
+            <%= link_to(book_path(f)) do %>
+            <%= image_tag(f.image, size: "150x250", alt: "Image" , class:"card-img-top") %>
+          <%end%>
+          <%= link_to(book_path(f)) do %>
           <h4 class="card-title text-center text-title">
             <%=f.title %></h4>
-          <h6 class="card-title text-center">
-          category: <%=f.category %></h6>
-            <h6 class="card-title text-center text-price">
-              price: $<%=f.price %></h6>
-            <%=button_to order_details_path(:book_id => f.id), class: "btn btn-warning  btn_x "  , params:{bookID: f.id} do %>
-                <i class="glyphicon glyphicon-plus" style="color:black;"></i>
-                <%= fa_icon("glyphicon-plus") %>
-                Add to Cart
-              <% end %>
-           <p class="pro-text card-text text-center">published: <%= f.book_year_published %></p>
-        </div>
-      </div>
-    <%end%>
+        <%end%>
+        <h6 class="card-title text-center">
+          category:
+          <%=f.category %></h6>
+        <h6 class="card-title text-center text-price">
+          price: $<%=f.price %></h6>
+        <%=button_to order_details_path(:book_id => f.id), class: "btn btn-warning btn_x " , params:{bookID: f.id} do %>
+        <i class="glyphicon glyphicon-plus" style="color:black;"></i>
+        <%= fa_icon("glyphicon-plus") %>
+        Add to Cart
+      <% end %>
+      <p class="pro-text card-text text-center">published:
+        <%= f.book_year_published %></p>
+    </div>
   </div>
+<%end%>
+</div>
 </div>
 <div class=".pag_m">
 
 <div class="pag_x digg_pagination">
-  <%= will_paginate @book %>
-  <br>
+<%= will_paginate @book %>
+<br>
 </div>
 </div>
 </div>
