--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+  <div class="center jumbotron">
+
+    <%= render 'book_show', book: @book %>
+
+</div> 
